pnst/k8s/pnst-ping-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The JGroups ping port for clustering.
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  labels:
    application: pnst-app
  name: pnst-app-ping
spec:
  clusterIP: None
  ports:
  - name: ping
    port: 8888
    protocol: TCP
    targetPort: 8888
  publishNotReadyAddresses: true
  selector:
    deploymentConfig: pnst-app
  sessionAffinity: None
  type: ClusterIP
