pnst/k8s/pnst-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The web server's http port.
  labels:
    application: pnst-app
  name: pnst-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentConfig: pnst-app
  sessionAffinity: None
  type: ClusterIP
